--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@clerk/themes": "^2.4.3",
     "@hookform/resolvers": "^5.2.1",
     "@prisma/client": "6.12.0",
+    "@radix-ui/react-alert-dialog": "^1.1.15",
+    "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-popover": "^1.1.15",
     "@radix-ui/react-radio-group": "^1.3.8",
